# units_of_measurement

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.js  index.mjs  package.json  pyproject.toml
json/: ontology_crosswalk_base_units.json  si_units.json  units_of_measurement.json  units_with_ontologies.json  uom.json
json/focused/: biomedical_units.json  property_summary.json  si_base_units.json  ucum_units.json  uo_units.json
jsonl/: si_units.jsonl  units_of_measurement.jsonl  units_with_ontologies.jsonl  uom.jsonl
jsonl/focused/: biomedical_units.jsonl  property_summary.jsonl  si_base_units.jsonl  ucum_units.jsonl  uo_units.jsonl
notes/: QA_PROPERTY_NOTES.md  uom_mismatch.txt
resource/bioportal/units_of_measure_ontology/: OM.csv  UO.csv  bubastis_diff.xml  owlapi.xrdf
schema/: README.md  ontology_crosswalk_base_units.schema.json  si_units.schema.json  units_of_measurement.schema.json  uom.schema.json
schema/focused/: property_summary.schema.json  si_base_units.schema.json  ucum_units.schema.json  uo_units.schema.json
scripts/: README.md  add_om_units.py  annotate_with_ontologies.py  apply_ontology_annotations.py  convert_jsonl_to_json.py  generate_focused_lists.py  validate_ontology_annotations.py  validate_schemas.py  validate_uom.py
units_of_measurement/: __init__.py
