[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "units-of-measurement"
version = "1.3.0"
description = "Comprehensive units of measurement dataset — 121 physical quantities, conversion factors, 11 measurement systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Duncan Scott" },
]
keywords = ["units", "measurement", "conversion", "si-units", "imperial", "metric", "physics", "dataset"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://github.com/duncanscott/units-of-measurement"
Repository = "https://github.com/duncanscott/units-of-measurement"

[tool.hatch.build.targets.wheel]
packages = ["units_of_measurement"]

[tool.hatch.build.targets.wheel.force-include]
"jsonl/units_of_measurement.jsonl" = "units_of_measurement/data/units_of_measurement.jsonl"
"jsonl/si_units.jsonl" = "units_of_measurement/data/si_units.jsonl"
"jsonl/uom.jsonl" = "units_of_measurement/data/uom.jsonl"
"jsonl/ontology_crosswalk_base_units.jsonl" = "units_of_measurement/data/ontology_crosswalk_base_units.jsonl"
"jsonl/focused" = "units_of_measurement/data/focused"
"schema" = "units_of_measurement/schema"

[tool.hatch.build.targets.sdist]
include = ["units_of_measurement/", "jsonl/units_of_measurement.jsonl", "jsonl/si_units.jsonl", "jsonl/uom.jsonl", "jsonl/ontology_crosswalk_base_units.jsonl", "jsonl/focused/", "schema/", "LICENSE", "README.md", "pyproject.toml"]
